--- a/aCis_gameserver/.classpath
+++ b/aCis_gameserver/.classpath
@@ -7,8 +7,11 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/c3p0-0.9.5-pre5.jar"/>
-	<classpathentry kind="lib" path="lib/mchange-commons-java-0.2.6.2.jar"/>
-	<classpathentry kind="lib" path="lib/mysql-connector-java-8.0.15.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/c3p0-0.9.5-pre5.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/mchange-commons-java-0.2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/mysql-connector-java-8.0.15.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/mchange.commons.java"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/mysql.connector.java"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/mchange.c3p0"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
