--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'net.sf.l2j'
-version '1.0-SNAPSHOT'
+version '1.1-SNAPSHOT'
 
 repositories {
     mavenCentral()
