--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'org.jetbrains.kotlin.jvm' version '1.8.0'
     id 'java'
     id 'application'
 }
@@ -19,10 +20,6 @@ ext {
 group 'net.sf.l2j'
 version versionName
 
-configurations {
-    alguinho
-}
-
 repositories {
     mavenCentral()
 }
@@ -37,8 +34,19 @@ dependencies {
     // https://mvnrepository.com/artifact/mysql/mysql-connector-java
     implementation 'mysql:mysql-connector-java:8.0.15'
 
+    implementation "io.ktor:ktor-server-core:2.2.4"
+    implementation "io.ktor:ktor-server-netty:2.2.4"
+    implementation "io.ktor:ktor-server-status-pages:2.2.4"
+    implementation "io.ktor:ktor-server-default-headers:2.2.4"
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
+    testImplementation 'org.jetbrains.kotlin:kotlin-test'
+
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
+    testImplementation 'org.slf4j:slf4j-simple:1.7.36'
+    implementation 'org.slf4j:slf4j-simple:1.7.36'
 }
 
 jar {
@@ -79,12 +87,12 @@ def filesDirectories() {
     mkdir layout.buildDirectory.dir("$mainFolder/$tools")
 }
 
-task copyDocsFiles() {
+tasks.register('copyDocsFiles') {
     doFirst {
         filesDirectories()
     }
     doLast {
-        try{
+        try {
             initLoginMainFolder()
             initLoginConfigFolder()
             initGameMainFolder()
@@ -94,7 +102,7 @@ task copyDocsFiles() {
             initToolsFolder()
             initLoginLibsFolder()
             initGameLibsFolder()
-        }catch (e){
+        } catch (e) {
             println(e)
         }
     }
@@ -148,6 +156,7 @@ def initGameMainFolder() {
         from('src/main/resources/dist') {
             include 'GameServer_loop.sh'
             include 'startGameServer.*'
+            include 'startCmsServer.*'
             include 'GeoDataConverter.*'
         }
         into layout.buildDirectory.dir('l2custom_acis/game')
@@ -224,12 +233,12 @@ def initToolsFolder() {
     }
 }
 
-task copyDependenciesToLibFolder(type: Copy) {
+tasks.register('copyDependenciesToLibFolder', Copy) {
     from configurations.runtimeClasspath
     into layout.buildDirectory.dir('libs')
 }
 
-task deleteBuild(type: Delete) {
+tasks.register('deleteBuild', Delete) {
     delete layout.buildDirectory.dir("$mainFolder")
     delete layout.buildDirectory.dir('libs')
 }
