--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.8.0'
+    id("org.jetbrains.kotlin.plugin.serialization") version "1.8.0"
     id 'java'
     id 'application'
 }
@@ -38,6 +39,8 @@ dependencies {
     implementation "io.ktor:ktor-server-netty:2.2.4"
     implementation "io.ktor:ktor-server-status-pages:2.2.4"
     implementation "io.ktor:ktor-server-default-headers:2.2.4"
+    implementation("io.ktor:ktor-server-content-negotiation:2.2.4")
+    implementation("io.ktor:ktor-serialization-kotlinx-json:2.2.4")
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
