--- a/src/main/resources/config/players.properties
+++ b/src/main/resources/config/players.properties
@@ -7,6 +7,8 @@ AttackFromMounts = True
 
 NoGradePenalty = False
 
+NoWeightPenalty = False
+
 # If True, when effects of the same stack group are used, lesser
 # effects will be canceled if stronger effects are used. New effects
 # that are added will be canceled if they are of lesser priority to the old one.
