:heavy_plus_sign:
champs integration

--- a/src/main/resources/config/npcs.properties
+++ b/src/main/resources/config/npcs.properties
@@ -13,7 +13,10 @@ ChampionMaxLevel = 70
 ChampionHp = 8
 
 # Hp Regen Multiplier
-ChampionRegenHp = 1.
+ChampionHpRegen = 1.
+
+# Mp Regen Multiplier
+ChampionMpRegen = 1.
 
 # Rewards multiplier
 ChampionRewards = 8
