--- a/src/main/resources/config/geoengine.properties
+++ b/src/main/resources/config/geoengine.properties
@@ -16,6 +16,11 @@
 # at different folder/harddrive ("C:/Program Files/Lineage II/system/geodata/"), default: ./data/geodata/
 GeoDataPath = ./data/geodata/
 
+# Specifies the geodata files type. Default: L2OFF
+# L2J: Using L2J geodata files (filename e.g. 22_16.l2j)
+# L2OFF: Using L2OFF geodata files (filename e.g. 22_16_conv.dat)
+GeoDataType = L2J
+
 # =================================================================
 #                           Path checking
 # =================================================================
