--- a/src/main/resources/config/npcs.properties
+++ b/src/main/resources/config/npcs.properties
@@ -3,7 +3,7 @@
 #=============================================================
 
 # Chance for a mob to became champion (in percent) - 0 to disable
-ChampionFrequency = 0
+ChampionFrequency = 20
 
 # Min and max lvl allowed for a mob to be champion.
 ChampionMinLevel = 20
@@ -55,7 +55,7 @@ BufferStaticCostPerBuff = -1
 
 # Allow the use of class Managers to change occupation
 # Default = False
-AllowClassMasters = False
+AllowClassMasters = True
 
 # ConfigClassMaster=1;[57(100000)];[];2;[57(1000000)];[];3;[57(10000000)],[5575(1000000)];[6622(1)] 
 # 1st occupation change for 100.000 Adena (item id 57) 
@@ -73,7 +73,7 @@ ConfigClassMaster = 1;[];[];2;[];[];3;[];[]
 # Artisan, Scavenger, Warsmith, Bounty Hunter, Maestro, Fortune Seeker.
 # But Warsmith will be able to change only to Maestro. 
 # Default = False
-AllowEntireTree = False
+AllowEntireTree = True
 
 # Announce to players the location of the Mammon NPCs during Seal Validation.
 # Default is False.
@@ -84,7 +84,7 @@ AnnounceMammonSpawn = False
 AltMobAgroInPeaceZone = True
 
 # Show L2Monster level and aggro 
-ShowNpcLevel = False
+ShowNpcLevel = True
 
 # Show clan && alliance crests on NPCs, default: False
 ShowNpcCrest = False
@@ -223,7 +223,7 @@ ZakenRandomSpawn = 20
 
 # If True, guards will attack at sight aggressive monsters.
 # Default: False.
-GuardAttackAggroMob = False
+GuardAttackAggroMob = True
 
 # Maximum range mobs can randomly go from spawn point
 MaxDriftRange = 200
