--- a/src/main/resources/config/server.properties
+++ b/src/main/resources/config/server.properties
@@ -27,7 +27,7 @@ URL = jdbc:mysql://localhost/acis?serverTimezone=UTC
 #URL = jdbc:hsqldb:hsql://localhost/acis
 #URL = jdbc:sqlserver://localhost/database=acis/user=sa/password=
 
-Login = 
+Login = root
 Password = 
 
 # Maximum database connections (minimum 2, basically 10 if number under 10, default 100).
@@ -111,7 +111,7 @@ PlayerDroppedItemMultiplier = 1
 # =================================================================
 
 # Rate control, float values.
-RateXp = 1.
+RateXp = 10.
 RateSp = 1.
 RatePartyXp = 1.
 RatePartySp = 1.
@@ -180,7 +180,7 @@ AllowManor = True
 AllowBoat = True
 
 # Allow characters to receive damage from falling.
-EnableFallingDamage = True
+EnableFallingDamage = False
 
 # ================================================================
 #                      Debug, Dev & Test config
@@ -190,8 +190,8 @@ EnableFallingDamage = True
 NoSpawns = False
 
 # Debug messages (by default False, easily "flood" your GS logs).
-Developer = False
-PacketHandlerDebug = False
+Developer = True
+PacketHandlerDebug = True
 
 # Throw items on objects movement, cleaned every X sec. Used to see movement behavior ingame. Default is 0 (desactivated).
 DebugMovement = 0
