--- a/src/main/resources/config/loginserver.properties
+++ b/src/main/resources/config/loginserver.properties
@@ -33,7 +33,7 @@ URL = jdbc:mysql://localhost/acis?serverTimezone=UTC
 #URL = jdbc:hsqldb:hsql://localhost/acis
 #URL = jdbc:sqlserver://localhost/database=acis/user=sa/password=
 
-Login = 
+Login = root
 Password = 
 
 MaximumDbConnections = 10
