--- a/src/main/resources/config/players.properties
+++ b/src/main/resources/config/players.properties
@@ -1,13 +1,21 @@
+
 #=============================================================
-#                           Misc
+#                           Custom
 #=============================================================
 
-
+#allow to attack from all the mounts
 AttackFromMounts = True
 
-NoGradePenalty = False
+#disables the grade penalty
+NoGradePenalty = True
 
-NoWeightPenalty = False
+#disables the weight penalty
+NoWeightPenalty = True
+
+
+# =============================================================
+#                           Misc
+#=============================================================
 
 # If True, when effects of the same stack group are used, lesser
 # effects will be canceled if stronger effects are used. New effects
@@ -236,10 +244,10 @@ AltBlacksmithUseRecipes = True
 #=============================================================
 
 # AutoLearnSkills. True to enable, False to disable
-AutoLearnSkills = False
+AutoLearnSkills = True
 
 # If disabled, magic dmg has always 100% chance of success, default: True.
-MagicFailures = True
+MagicFailures = False
 
 # Alternative Rate Value for Perfect Shield Block Rate. Default: 5.
 PerfectShieldBlockRate = 5
@@ -248,7 +256,7 @@ PerfectShieldBlockRate = 5
 LifeCrystalNeeded = True
 
 # Spellbook is needed to learn skills. Default: True
-SpBookNeeded = True
+SpBookNeeded = False
 
 # Giant book is needed to enchant skills. Default: True
 EnchantSkillSpBookNeeded = True
@@ -257,7 +265,7 @@ EnchantSkillSpBookNeeded = True
 DivineInspirationSpBookNeeded = True
 
 # Allow player subclass addition without checking for unique quest items. Default : False.
-SubClassWithoutQuests = False
+SubClassWithoutQuests = True
 
 #=============================================================
 #                        Buffs config
