--- a/src/main/resources/config/players.properties
+++ b/src/main/resources/config/players.properties
@@ -12,6 +12,12 @@ NoGradePenalty = True
 #disables the weight penalty
 NoWeightPenalty = True
 
+#disable the penalty when the diff level on mounts exist
+NoPenaltiesOnDiffLvlForMounts = True
+
+#max running speed disabled = 0
+MaxRunSpd = 0
+
 
 # =============================================================
 #                           Misc
