--- a/src/main/resources/config/server.properties
+++ b/src/main/resources/config/server.properties
@@ -191,7 +191,7 @@ NoSpawns = False
 
 # Debug messages (by default False, easily "flood" your GS logs).
 Developer = True
-PacketHandlerDebug = True
+PacketHandlerDebug = False
 
 # Throw items on objects movement, cleaned every X sec. Used to see movement behavior ingame. Default is 0 (desactivated).
 DebugMovement = 0
