--- a/src/main/resources/config/players.properties
+++ b/src/main/resources/config/players.properties
@@ -18,6 +18,9 @@ NoPenaltiesOnDiffLvlForMounts = True
 #max running speed disabled = 0
 MaxRunSpd = 0
 
+#enables buff with the same effect on the buff list
+AllowStackBuffsOfSameEffect = true
+
 
 # =============================================================
 #                           Misc
